@@ -1,7 +1,7 @@
 // Copyright (c) 1999-2001  David Muse
 // See the COPYING file for more information.
 
-#include <sqlrelay/include/private/sqlrclientdebugprint.h>
+#include <sqlrelay/private/sqlrclientdebugprint.h>
 
 #include <rudiments/dynamicarray.h>
 #include <rudiments/stringbuffer.h>
