@@ -42,6 +42,7 @@
 	renamed "authentication" to "auth" (for authentication/authorization,
 		also matches module name prefix) in config file and docs
 	removed an errant flushWriteBuffer after client auth
+	debug-print macros are installed now
 
 0.64 - fixed bug in sqlrsh that caused it to filter out non-ascii characters
 	added informix connection module
